# rssr-rs

./: .gitignore  ARCHITECTURE.md  CHECKLISTS.md  CLAUDE.md  Cargo.toml  README.md  TASKS.md  changelog.json
changelog/: v0.1.0.md
scripts/: ollama_agent.py
src/: app.rs  fetch.rs  main.rs  storage.rs
src/handlers/: article.rs  feed_editor.rs  feed_list.rs  mod.rs  settings.rs
src/models/: core_types.rs  events.rs  feed.rs  mod.rs  navigation.rs  scroll.rs
src/ui/: changelog.rs  chrome.rs  content.rs  editor.rs  mod.rs  popups.rs  settings.rs
