[package]
name = "rssr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
crossterm = "0.29.0"
feed-rs = "2.3.1"
html2md = "0.2.15"
open = "5.3.3"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
readability = "0.3.0"
quick-xml = "0.39.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tui-markdown = "0.3.7"
